# pips

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install-deb.sh  main.py  pyproject.toml  setup.cfg  setup.py
docs/: requirements.txt
pips/: __init__.py  __main__.py
speakingpips/: __init__.py  __main__.py  speakingpips.py
tests/: test_pips.py
