[project]
name = "pips"
version = "0.0.1"
description = "Speaking Clock"
authors = ["Lee Jordan"]
license = "GNU General Public License v3.0"
readme = "README.md"

[build-system]
requires = [
	"setuptools>=54",
	"wheel",
	"pysine>=0.9.2",
	"PyAudio>=0.2.13"
]
build-backend = "setuptools.build_meta"
