[project]
name = "speakingpips"
version = "0.0.1"
description = "Speaking Clock"
authors = [
		{name = "Lee Jordan", email="lee.jordan@gmail.com"},
	  ]
license = { file = "LICENSE.md" }
readme = "README.md"

keywords = ["timekeeping", "timeserver", "syncronization", "hobbyist", "pips", "timesignal", "automation", "homeautomation"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]


requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/duracell80/speaking-pips"
documentation = "https://github.com/duracell80/speaking-pips/README.md"
repository = "https://github.com/duracell80/speaking-pips"
issues = "https://github.com/duracell80/pips/speaking-issues"

[build-system]
requires = [
	"setuptools",
	"wheel",
	"pysine>=0.9.2",
	"PyAudio>=0.2.13"
]
build-backend = "setuptools.build_meta"
