[metadata]
name = pips
version = 0.0.1
author = Lee Jordan
author_email = lee.jordan@gmail.com
description = Speaking Clock
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duracell80/pips
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU GPLv3 License
	Operating System :: Linux

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
